--- a/MY CV WEB/CV.css
+++ b/MY CV WEB/CV.css
@@ -38,11 +38,7 @@ body{
     border-bottom: 1px solid rgba(255,255,255,0.2);
 }
 
-.container .R_side{
-    position: relative;
-    background: #fff;
-    padding: 40px;
-}
+
 .pro_text .imgbx{
     position: relative;
     width: 200px;
@@ -114,4 +110,173 @@ margin-bottom: 15px;
 .contactinfo.education h4{
     color: #fff;
     font-weight: 300;
+}
+.contactinfo.language .percent
+{
+position: relative;
+width: 100%;
+height:6px ;
+background: #081921;
+display: block;
+margin-top: 5px;
+}
+.contactinfo.language .percent div.en{
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    background: #03a9f4;
+}
+.contactinfo.language .percent div.ml{
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    background: #10ca48;
+}
+.contactinfo.language .percent div.a{
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    background: #9a4f12;
+}
+.container .R_side{
+    position: relative;
+    background: #fff;
+    padding: 40px;
+}
+.about{
+    margin-bottom:50px ;
+
+}
+.about:last-child
+{
+    margin-bottom:0;
+}
+.tittle2
+{
+    color:#1c6688;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    margin-bottom: 10px;
+}
+p
+{
+  color: #3329;  
+}
+.about .box
+{
+    display: flex;
+    flex-direction: row;
+    margin: 20px;
+
+}
+.about .box .year_company
+{
+    min-width: 150px;
+}
+.about .box .year_company h5
+{
+    text-transform:uppercase;
+    color:#848c90 ;
+    font-weight: 600;
+}
+.about .box .text h4
+{
+    text-transform: uppercase;
+    color: #2a7da2;
+    font-size: 16px;
+}
+.skills .box
+{
+    position: relative;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 150px 1fr;
+    justify-content: center;
+    align-items: center;
+}
+.skills .box h4
+{
+    text-transform: uppercase;
+    color: #848c99;
+    font-weight: 500;
+}
+.skills .box  .percent
+{
+    position: relative;
+    width: 100%;
+    height: 10px;
+    background: #dfd9d9;
+
+}
+.skills .box .percent .h
+{
+position: absolute;
+top: 0;
+left: 0;
+height: 100%;
+background:#03a9f4 ;
+}
+.skills .box .percent .c
+{
+position: absolute;
+top: 0;
+left: 0;
+height: 100%;
+background:#03a9f4 ;
+}
+.skills .box .percent .j
+{
+position: absolute;
+top: 0;
+left: 0;
+height: 100%;
+background:#03a9f4 ;
+}
+.skills .box .percent .b
+{
+position: absolute;
+top: 0;
+left: 0;
+height: 100%;
+background:#03a9f4 ;
+}
+.skills .box .percent .g
+{
+position: absolute;
+top: 0;
+left: 0;
+height: 100%;
+background:#03a9f4 ;
+}
+.intrest ul
+{
+    display: grid;
+    grid-template-columns:repeat(4,1fr);
+}
+.intrest ul li
+{
+    list-style: none;
+    color: #333;
+    font-weight: 500;
+    margin: 10px 0;
+
+}
+.interest ul li .fa{
+    color: #03a9f4;
+    font-size: 18px;
+    width: 20px;
+}
+@media (max-width: 1000px)
+{
+    .container
+    {
+        margin:  10px;
+        grid-template-columns: repeat(1,1fr);
+    }
 }
